# what_stream

./: .gitignore  Cargo.toml  README.md  long_help.txt  short_help.txt
assets/: long_help.txt  short_help.txt
src/: args.rs  config.rs  lib.rs  main.rs  stream.rs  string.rs
src/render/: color.rs  config.rs  demo.rs  entries.rs  mod.rs  style.rs  theme.rs
what_stream_core/: Cargo.toml
what_stream_core/src/: app_access.rs  data.rs  http.rs  lib.rs  sort.rs  stream.rs  tags_cache.rs  util.rs  what_stream.rs
what_stream_gui/: Cargo.toml
what_stream_gui/src/: action.rs  app.rs  config.rs  ext.rs  main.rs
what_stream_tui/: Cargo.toml
what_stream_tui/assets/: long_help.txt  short_help.txt
what_stream_tui/src/: args.rs  config.rs  lib.rs
what_stream_tui/src/render/: color.rs  demo.rs  entries.rs  theme.rs
