[package]
name                 = "what_stream"
version              = "0.5.0"
authors              = ["museun <museun@outlook.com>"]
edition              = "2018"
license              = "0BSD"

[dependencies]
anyhow               = "1.0.43"
chrono               = { version = "0.4.19", default-features = false, features = ["clock"] }
dirs                 = "3.0.2"
pico-args            = "0.4.2"
serde                = { version = "1.0.130", features = ["derive"] }
serde_json           = "1.0.67"
terminal_size        = "0.1.17"
toml                 = "0.5.8"
unicode-segmentation = "1.8.0"
unicode-width        = "0.1.8"
ureq                 = { version = "2.2.0", default-features = false, features = ["json", "tls"] } #native-tls
yansi                = "0.5.0"
