[package]
name                 = "what_stream_core"
version              = "0.1.0"
authors              = ["museun <museun@outlook.com>"]
edition              = "2021"
license              = "0BSD"

[dependencies]
anyhow               = "1.0.58"
chrono               = { version = "0.4.19", default-features = false, features = ["clock"] }
dirs                 = "4.0.0"
log                  = "0.4.17"
serde                = { version = "1.0.137", features = ["derive"] }
serde_json           = "1.0.82"
ureq                 = { version = "2.4.0", default-features = false, features = ["json", "tls"] } #native-tls
